--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,7 +9,6 @@ body {
     background-size: cover;
 }
 
-
 .max-wigth {
     padding-left: 10%;
     padding-right: 10%;
@@ -79,73 +78,104 @@ header {
 
     .navig-mini {
         display: block;
+        position: fixed;
+        right: 20px;
+        width: 30px;
+        height: 30px;
+        user-select: none;
+        z-index: 101;
     }
 
-    .navig-mini ul{
-        list-style: none;
-        margin: 0;
-        padding: 0;
-    }
-
-    .navig-mini a {
-        display: block;
-        text-decoration: none;
-        outline: none;
-        transition: .4s ease-in-out;
-    }
-
-    .navig-mini {
-        backface-visibility: hidden;
-    }
-
-    .navig-mini > li {
-        display: inline-block;
-        position: relative;
-    }
-
-    .navig-mini > li > a {
-        font-weight: bold;
-        color: rgb(255, 255, 255);
-        text-transform: uppercase;
-        }
-
-        .down:after {
-        margin-left: 8px;
-    }
-
-    .navig-mini li a:hover {
-        color: rgb(118, 195, 143);
-    }
-
-    .submenu {
-        background: rgb(43, 43, 43);
-        border: 2px solid rgb(118, 195, 143);
-        border-radius: 5%;
-        position: absolute;
-        left: 0;
-        visibility: hidden;
+    #menu_toggle {
         opacity: 0;
-        z-index: 5;
-        transform: perspective(600px) rotateX(-90deg);
-        transform-origin: 0% 0%;
-        transition: .6s ease-in-out;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        cursor: pointer;
     }
 
-    .navig-mini > li:hover .submenu{
+    #menu_toggle:checked ~ .menu_btn > span {
+        transform: rotate(45deg);
+    }
+
+    #menu_toggle:checked ~ .menu_btn > span::before {
+        top: 0;
+        transform: rotate(0);
+    }
+
+    #menu_toggle:checked ~ .menu_btn > span::after {
+        top: 0;
+        transform: rotate(90deg);
+    }
+
+    #menu_toggle:checked ~ .menu_box {
         visibility: visible;
-        opacity: 1;
-        transform: perspective(600px) rotateX(0deg);
-        left: -50px;
+        right: 0;
     }
 
-    .submenu li a {
+    .menu_btn {
+        align-items: center;
+        position: absolute;
+        top: 50%;
+        right: 0;
+        width: 100%;
+        z-index: 1;
+        cursor: pointer;
+    }
+
+    .menu_btn > span,
+    .menu_btn > span::before,
+    .menu_btn > span::after {
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        background-color: #979797;
+        transition-duration: .25s;
+    }
+
+    .menu_btn > span::before {
+        content: '';
+        top: -8px;
+    }
+
+    .menu_btn > span::after {
+        content: '';
+        top: 8px;
+    }
+
+    .menu_box {
+        display: block;
+        position: fixed;
+        visibility: hidden;
+        top: 0;
+        right: -100%;
+        width: 250px;
+        height: 100%;
+        margin: 0;
+        padding: 80px 0;
+        list-style: none;
+        background-color: rgb(43, 43, 43);
+        box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+        transition-duration: .25s;
+    }
+
+    .menu_item {
+        display: block;
+        padding: 12px 24px;
         color: rgb(255, 255, 255);
-        font-size: 13px;
-        line-height: 36px;
-        padding: 0 10px;
+        font-size: 20px;
+        text-decoration: none;
+        transition-duration: .25s;
         text-transform: uppercase;
+    }
+
+    .menu_item:hover {
+        background-color: rgb(118, 195, 143);
+        color: rgb(43, 43, 43);
     }
 }
+
 
 @media (max-width: 450px){
     .logo-text{
@@ -179,8 +209,6 @@ header {
 
 .text-slider{
     box-sizing: border-box;
-    /*padding: 10px;*/
-    /*width: 50%;*/
     flex-basis: 50%;
     justify-content: center;
     align-items: center;
@@ -190,10 +218,6 @@ header {
 .text-slider:first-child {
     padding-right: 10%;
 }
-
-/*.decription-slider {*/
-/*    padding: 0 5% 0 10%;*/
-/*}*/
 
 .title-text-slider {
     font-size: 46px;
@@ -261,7 +285,6 @@ header {
 @media (max-width: 650px) {
 
     .text-slider {
-        /*width: 100%;*/
         flex-basis: 100%;
         text-align: center;
     }
@@ -315,7 +338,6 @@ header {
 
 @media (max-width: 650px) {
     .service {
-        /*width: 100%;*/
         flex-basis: 100%;
     }
 
@@ -569,12 +591,14 @@ form{
 input[type=text], textarea {
     width: 100%;
     padding: 10px;
+    /*padding: 10px 0 10px 0;*/
     border: none;
     margin-bottom: 10px;
     resize: vertical;
     border-radius: 15px;
     background-color: #222222;
     font-family: "Georgia";
+    box-sizing: border-box;
 
 }
 
